1.3.0-alpha.7 - Added Perspective Birthday Splash Text (June 14th).